[package]
name = "music_api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
librespot = { git = "https://github.com/fantasybot-red/librespot" , rev = "64cb3fb" }
tokio-util = { version = "0.7.11", features = ["full"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
url = "2.5.1"
lazy_static = "1.5.0"
